--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -174,6 +174,7 @@
     "feature3Title": "Buy with Confidence",
     "feature3Desc": "Direct links to Chrono24 and Amazon. No middleman.",
     "simplePricing": "Simple Pricing",
+    "dataUnavailable": "Live data will appear when the service is available.",
     "unlockWithPro": "Unlock with Pro",
     "strip60": "60 seconds",
     "stripAI": "AI match",
@@ -186,7 +187,8 @@
     "offlineTitle": "WatchPick is taking a short pause",
     "offlineBody": "Live pricing and AI watch picks are temporarily paused. Please try again in a moment.",
     "offlineDetail": "Your account and preferences are safe. We’ll resume as soon as our servers reconnect.",
-    "backOnline": "WatchPick is back — live data restored.",
+    "backOnline": "WatchPick is back.",
+    "backOnlineSubtitle": "Taking you to the dashboard…",
     "offlineGeekShow": "Show connection details",
     "offlineGeekHide": "Hide connection details",
     "offlineGeekTitle": "For geeks: connection heartbeat",
