--- a/src/locales/de.json
+++ b/src/locales/de.json
@@ -174,6 +174,7 @@
     "feature3Title": "Kauf mit Vertrauen",
     "feature3Desc": "Direkte Links zu Chrono24 und Amazon. Kein Mittelsmann.",
     "simplePricing": "Einfache Preise",
+    "dataUnavailable": "Live-Daten erscheinen, sobald der Dienst verfügbar ist.",
     "unlockWithPro": "Mit Pro freischalten",
     "quiz": "Quiz",
     "signIn": "Anmelden",
@@ -183,7 +184,8 @@
     "offlineTitle": "WatchPick ist vorübergehend offline",
     "offlineBody": "Wir können den Backend-Server gerade nicht erreichen. Live-Preise und KI-Picks sind möglicherweise nicht verfügbar.",
     "offlineDetail": "Deine Daten sind sicher. Wir sind zurück, sobald der Server wieder online ist.",
-    "backOnline": "Backend ist wieder online – alles läuft."
+    "backOnline": "WatchPick ist wieder für Sie da.",
+    "backOnlineSubtitle": "Wir bringen dich zum Dashboard…"
   },
   "results": {
     "yourPicks": "Deine Picks",
