--- a/src/locales/it.json
+++ b/src/locales/it.json
@@ -174,6 +174,7 @@
     "feature3Title": "Acquista con fiducia",
     "feature3Desc": "Link diretti a Chrono24 e Amazon. Nessun intermediario.",
     "simplePricing": "Prezzi semplici",
+    "dataUnavailable": "I dati in tempo reale appariranno quando il servizio è disponibile.",
     "unlockWithPro": "Sblocca con Pro",
     "quiz": "Quiz",
     "signIn": "Accedi",
@@ -183,7 +184,8 @@
     "offlineTitle": "WatchPick è temporaneamente offline",
     "offlineBody": "Non riusciamo a raggiungere il backend. I prezzi live e i pick AI potrebbero non essere disponibili.",
     "offlineDetail": "I tuoi dati sono al sicuro. Torniamo online non appena il server è di nuovo attivo.",
-    "backOnline": "Backend di nuovo online — puoi continuare."
+    "backOnline": "WatchPick è di nuovo disponibile.",
+    "backOnlineSubtitle": "Ti portiamo alla dashboard…"
   },
   "results": {
     "yourPicks": "I tuoi pick",
