--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -174,6 +174,7 @@
     "feature3Title": "Покупайте с уверенностью",
     "feature3Desc": "Прямые ссылки на Chrono24 и Amazon. Без посредников.",
     "simplePricing": "Простые цены",
+    "dataUnavailable": "Актуальные данные появятся, когда сервис будет доступен.",
     "unlockWithPro": "Разблокировать с Pro",
     "quiz": "Квиз",
     "signIn": "Войти",
@@ -183,7 +184,8 @@
     "offlineTitle": "WatchPick временно недоступен",
     "offlineBody": "Сейчас не удаётся подключиться к серверу. Живые цены и подборки ИИ могут быть недоступны.",
     "offlineDetail": "Ваши данные в безопасности. Мы вернёмся, как только сервер снова будет онлайн.",
-    "backOnline": "Backend снова онлайн — можно продолжать."
+    "backOnline": "WatchPick снова доступен.",
+    "backOnlineSubtitle": "Переход в панель управления…"
   },
   "results": {
     "yourPicks": "Ваши подборки",
