--- a/src/locales/sq.json
+++ b/src/locales/sq.json
@@ -174,6 +174,7 @@
     "feature3Title": "Bli me besim",
     "feature3Desc": "Lidhje direkte me Chrono24 dhe Amazon. Pa ndërmjetës.",
     "simplePricing": "Çmime të thjeshta",
+    "dataUnavailable": "Të dhënat e drejtpërdrejta do të shfaqen kur shërbimi të jetë gati.",
     "unlockWithPro": "Zhblloko me Pro",
     "quiz": "Kuizi",
     "signIn": "Hyr",
@@ -183,7 +184,8 @@
     "offlineTitle": "WatchPick është përkohësisht offline",
     "offlineBody": "Nuk mund ta arrijmë serverin e backend-it tani. Çmimet live dhe zgjedhjet nga AI mund të mos jenë të disponueshme.",
     "offlineDetail": "Të dhënat tuaja janë të sigurta. Do të kthehemi sapo serveri të jetë sërish online.",
-    "backOnline": "Backend u rikthye online — gjithçka gati."
+    "backOnline": "WatchPick është përsëri gati.",
+    "backOnlineSubtitle": "Po të çojmë te paneli…"
   },
   "results": {
     "yourPicks": "Zgjedhjet tuaja",
